# fastapi-cookbook

./: README.md
saas_app/: README.md  main.py  pyproject.toml
saas_app/saas_app/: database.db  db_connection.py  main.py  models.py  operations.py  premium_access.py  rbac.py  security.py  types.py
task-manager/: README.md  main.py  models.py  operations.py  pyproject.toml  security.py  tasks.csv
task-manager/routers/: tasks.py
task-manager/tests/: conftest.py  test_main.py
