[project]
name = "saas-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==3.2.2",
    "fastapi[all]>=0.116.1",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "pyotp>=2.9.0",
    "pytest>=8.4.1",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.0",
]
